welcome.lessons.welcome.array.has271.Has271.scala.error
has271:5: error: type mismatch;
 found   : Int
 required: Boolean
{	if (nums(i) == 2 && nums(i+1) == 7 && nums(i+2) == nums(i)-2|nums(i)-1|nums(i)|nums(i)+1|nums(i)+2) {return true}
                                                                            ^