welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
var x = nums.length

for (i <- 0 to x-3)
{	if (nums(i) == 2 && nums(i+1) == 7 && nums(i+2) == nums(i)-2|nums(i)-1|nums(i)|nums(i)+1|nums(i)+2) {return true}
}
		
		
	return false
}